--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,9 @@ body {
 }
 
 a:hover, a:active, a:focus {
-  color: #2dca98;
-  outline: none;
-  text-decoration: none;
+	color: #fafafa;
+	outline: none;
+	text-decoration: none;
 }
 
 p {
@@ -430,15 +430,15 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Nav Meu Styling */
 .nav-menu a {
-  padding: 0 8px 10px 8px;
-  text-decoration: none;
-  display: inline-block;
-  color: #fff;
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  text-transform: uppercase;
-  font-size: 13px;
-  outline: none;
+	padding: 0 8px 10px 8px;
+	text-decoration: none;
+	display: inline-block;
+	color: #f5f5f5;
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	text-transform: uppercase;
+	font-size: 13px;
+	outline: none;
 }
 
 .nav-menu > li {
@@ -567,9 +567,9 @@ h1, h2, h3, h4, h5, h6 {
   outline: none;
 }
 
-#mobile-nav ul li a:hover {
-  color: #fff;
-}
+	#mobile-nav ul li a:hover {
+		color: #fafafa;
+	}
 
 #mobile-nav ul li li {
   padding-left: 30px;
@@ -709,11 +709,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 #about .about-container .icon-box .title a {
   color: #111;
 }
-
+a:hover {
+	color: #fafafa;
+}
 #about .about-container .icon-box .description {
-  margin-left: 80px;
-  line-height: 24px;
-  font-size: 14px;
+	margin-left: 80px;
+	line-height: 24px;
+	font-size: 14px;
 }
 
 /* Facts Section
