--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,22 @@ h1, h2, h3, h4, h5, h6 {
 		top: 26px;
 		color: white;
 	}
+	
+/*
+Change placeholder color for all inputs
+*/
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #cccccc;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: #cccccc;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: #cccccc;
+}
 
 /*--------------------------------------------------------------
 # Hero Section
@@ -345,6 +361,11 @@ h1, h2, h3, h4, h5, h6 {
   white-space: nowrap;
 }
 
+.nav-menu-right {
+	position: fixed;
+	right: 10vw;
+}
+
 .nav-menu > li {
   float: left;
 }
@@ -399,7 +420,7 @@ h1, h2, h3, h4, h5, h6 {
 	top: 35px;
 	color: white;
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
 	#nav-menu-container {
     display: none;
   }
@@ -517,7 +538,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   #mobile-nav-toggle {
     display: inline;
   }
