--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,24 @@ Change placeholder color for all inputs
   color: #cccccc;
 }
 
+/*
+Search glyphicon and text styling
+*/
+#searchGroup .glyphicon {
+  position: absolute;
+  padding-top: 5px;
+  pointer-events: none;
+  left: 0;
+  padding-left: 10px;
+  color: white;
+}
+
+#searchGroup #searchText {
+  color: white;
+  padding-left: 30px;
+  padding-right: 5px;
+}
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
