--- a/css/style.css
+++ b/css/style.css
@@ -552,6 +552,10 @@ Search glyphicon and text styling
   cursor: pointer;
 }
 
+.mobile-nav-active #mobile-nav-toggle {
+  right: unset;
+}
+
 #mobile-nav-toggle i {
   color: #fff;
 }
@@ -648,7 +652,8 @@ body.mobile-nav-active {
 }
 
 body.mobile-nav-active #mobile-nav {
-  left: 0;
+  left:unset;
+  right: 0;
 }
 
 body.mobile-nav-active #mobile-nav-toggle {
@@ -775,6 +780,10 @@ a:hover {
   /*margin: 0 0 20px 0;*/
   font-family: "Poppins", sans-serif;
   font-size: 14px;
+}
+
+.row-center {
+  text-align: center;
 }
 
 /* Services Section
