--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,18 @@ body {
 	width: 100%;
 	height: 100%;
 }
+
+.carousel .carousel-text {
+	float: right;
+	margin-right: 5vw;
+}
+
+@media (min-width: 1100px) {
+	.carousel .carousel-text {
+		margin-right: 10vw;
+	}
+}
+
 .backgroundImg1 {
 	width: 100%;
 	height: 100vh;
@@ -277,7 +289,6 @@ Search glyphicon and text styling
 	z-index: 1;
 	top: -177px;
 	text-align: right;
-	right: -900px;
 }
 
 @media (max-width: 768px) {
@@ -285,17 +296,17 @@ Search glyphicon and text styling
     font-size: 28px;
     line-height: 36px;
   }
-	#hero h5 {
+	/*#hero h5 {
 		color: #fff;
 		font-size: 14px;
 		width: 440px;
-		/* margin-top: -129px; */
+		/* margin-top: -129px;
 		position: relative;
 		z-index: 1;
 		top: -177px;
 		text-align: right;
 		right: -3px;
-	}
+	}*/
 }
 
 #hero h2 {
