--- a/css/gallery.css
+++ b/css/gallery.css
@@ -22,6 +22,22 @@ body {
 	width: 100%;
 	height: 100%;
 }
+
+.carousel .carousel-text {
+	float: right;
+	margin-right: 5vw;
+}
+
+@media (min-width: 1100px) {
+	.carousel .carousel-text {
+		margin-right: 10vw;
+	}
+}
+
+.carousel-control {
+	border: none;
+}
+
 .backgroundImg1 {
 	width: 100%;
 	height: 100vh;
@@ -180,6 +196,28 @@ h1, h2, h3, h4, h5, h6 {
 		top: 26px;
 		color: white;
 	}
+	
+/*
+Search glyphicon and text styling
+*/
+#searchGroup .glyphicon {
+  position: absolute;
+  padding-top: 5px;
+  pointer-events: none;
+  left: 0;
+  padding-left: 10px;
+  color: black;
+}
+
+#searchGroup #searchText {
+  padding-left: 30px;
+  padding-right: 5px;
+}
+
+#mobile-nav #searchGroup #searchText {
+  padding-left: 10px;
+  margin-right: 5px;
+}
 
 /*--------------------------------------------------------------
 # Hero Section
@@ -345,6 +383,19 @@ h1, h2, h3, h4, h5, h6 {
   white-space: nowrap;
 }
 
+
+.nav-menu-right {
+	position: fixed;
+	right: 5vw;
+}
+
+
+@media (min-width: 1100px) {
+	.nav-menu-right {
+		right: 10vw;
+	}
+}
+
 .nav-menu > li {
   float: left;
 }
@@ -399,7 +450,7 @@ h1, h2, h3, h4, h5, h6 {
 	top: 35px;
 	color: white;
 }
-@media (max-width: 768px) {
+@media (max-width: 992px) {
 	#nav-menu-container {
     display: none;
   }
@@ -515,10 +566,20 @@ h1, h2, h3, h4, h5, h6 {
 #mobile-nav-toggle i {
   color: #fff;
 }
+#searchGroup input {
+  color: black;
+}
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   #mobile-nav-toggle {
     display: inline;
+	margin-right: 70px;
+  }
+  #searchGroup input, #searchGroup .glyphicon {
+	  color: white;
+  }
+  #searchText {
+	  border-color: white;
   }
 	#call-to-action .cta-text {
 		color: #fff;
@@ -527,6 +588,14 @@ h1, h2, h3, h4, h5, h6 {
 		top: -37px;
 		text-align: center;
 		left: 0px;
+	}
+}
+
+
+@media (max-width: 550px) {
+	#mobile-nav-toggle {
+		display: inline;
+		margin-right: 30px;
 	}
 }
 
