--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: "Roboto";
+}
+
 .m-t-left {
 	left: 79px;
 }
@@ -8,7 +12,7 @@
 body {
   background: #fff;
   color: #666666;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 @media(min-width: 768px) {
@@ -75,7 +79,7 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
   padding: 0;
@@ -150,7 +154,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 6px 0;
   line-height: 1;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   letter-spacing: 3px;
   text-transform: uppercase;
@@ -163,16 +167,15 @@ h1, h2, h3, h4, h5, h6 {
 #header #logo img {
   padding: 0;
   margin: 0;
-  height:53px;
+  height:100px;
+  width: 100px;
 }
 
 @media (max-width: 768px) {
   #header #logo h1 {
     font-size: 26px;
   }
-  #header #logo img {
-    max-height: 40px;
-  }
+  
 	#call-to-action .cta-text {
 		color: #fff;
 		position: relative;
@@ -195,7 +198,12 @@ h1, h2, h3, h4, h5, h6 {
 		right: 274px;
 		top: 26px;
 		color: white;
-	}
+  }
+  
+#header.header-fixed #logo img{
+  max-height: 40px;
+  max-width: 40px;
+}
 	
 /*
 Change placeholder color for all inputs
@@ -357,7 +365,7 @@ Search glyphicon and text styling
 }
 
 #hero .btn-get-started {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   font-weight: 500;
   font-size: 16px;
@@ -500,7 +508,7 @@ Search glyphicon and text styling
 	text-decoration: none;
 	display: inline-block;
 	color: #f5f5f5;
-	font-family: "Poppins", sans-serif;
+	font-family: "Roboto", sans-serif;
 	font-weight: 400;
 	text-transform: uppercase;
 	font-size: 13px;
@@ -805,7 +813,7 @@ a:hover {
 #facts .counters p {
   padding: 0;
   /*margin: 0 0 20px 0;*/
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
 }
 
@@ -935,7 +943,7 @@ a:hover {
 }
 
 #call-to-action .cta-btn {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   font-weight: 500;
   font-size: 16px;
