fix: images skewed to left

--- a/css/style.css
+++ b/css/style.css
@@ -969,9 +969,10 @@ a:hover {
 	padding: 80px 0;
 }
 
+/* to fix images
 #portfolio #portfolio-wrapper {
   padding-right: 15px;
-}
+}*/
 
 #portfolio #portfolio-flters {
   padding: 0;
