--- a/css/theme.css
+++ b/css/theme.css
@@ -1038,6 +1038,15 @@ a:hover {
   top: -30px;
 }
 
+.themeCaptionWrapper {
+  position: relative;
+  z-index: 2;
+  top: 150px;
+  text-align: right;
+  padding: 2px 10px;
+  background: #00000055;
+}
+
 /* Team Section
 --------------------------------*/
 #team {
