--- a/css/style.css
+++ b/css/style.css
@@ -1005,7 +1005,7 @@ a:hover {
 		position: relative;
 		/*height: 200px;*/
 		overflow: hidden !important;
-		/*margin-bottom: 145px;*/
+		margin-bottom: 50px;
 		transition: all 350ms ease;
 		transform: scale(1);
 	}
@@ -1017,6 +1017,8 @@ a:hover {
 
 #portfolio .portfolio-item img {
   position: relative;
+  display: block;
+  margin: 0px auto;
   top: 0;
   transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
