--- a/css/style.css
+++ b/css/style.css
@@ -1019,6 +1019,7 @@ a:hover {
   position: relative;
   display: block;
   margin: 0px auto;
+  width: 100%;
   top: 0;
   transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
