--- a/css/style.css
+++ b/css/style.css
@@ -1020,6 +1020,7 @@ a:hover {
   display: block;
   margin: 0px auto;
   width: 100%;
+  height: 300px;
   top: 0;
   transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
