add transition duration to artist names

--- a/css/style.css
+++ b/css/style.css
@@ -1261,6 +1261,7 @@ a:hover {
   font-size: 24px;
   color: lightgray;
   text-decoration: none;
+  transition-duration: 0.5s;
 }
 
 #artistList a:hover {
