--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1248,20 +1248,22 @@ a:hover {
   text-decoration-style: dashed;
   transition-duration: 0.5s;
   font-weight: 200;
-  font-size: 24px;
+  font-size: 16px;
   font-family: "roboto";
   display:inline;
+  padding-right: 10px;
 }
 
 #portfolio-sortcontrol li:hover {
   text-decoration-style: solid;
   font-weight: 400;
-  font-size: 32px;
+  font-size: 24px;
+  cursor: pointer;
 }
 
 #portfolio-sortcontrol li.selected {
   text-decoration-style: solid;
   text-decoration-color: black;
   font-weight: 400;
-  font-size: 32px;
+  font-size: 24px;
 }
