--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,14 @@ body {
 	border: none;
 }
 
+.backgroundImg {
+	width: 100%;
+	height: 100vh;
+	background-size: auto;
+	background-size: cover;
+	position: relative;
+}
+
 .backgroundImg1 {
 	width: 100%;
 	height: 100vh;
