--- a/css/style.css
+++ b/css/style.css
@@ -1238,6 +1238,21 @@ a:hover {
 	
 	/* padding: 80px 0 60px 0; */
 }
+
+
+#footerZ a {
+  color: #333;
+  text-decoration: none;
+}
+
+#footerZ a.sublink {
+  margin-left: 20px;
+}
+
+#footerZ a:hover {
+  color: black;
+}
+
 #footer {
 	background: #f7f7f7;
 	margin-top: 32px;
