--- a/css/style.css
+++ b/css/style.css
@@ -1253,6 +1253,10 @@ a:hover {
   color: black;
 }
 
+#footerZ h4 {
+  text-transform: uppercase;
+}
+
 #footer {
 	background: #f7f7f7;
 	margin-top: 32px;
