apply responsiveness footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -24,3 +24,13 @@
 #footerZ table {
   width: 100%;
 }
+
+#footerZ [class*="col"] {
+  text-align: left;
+}
+
+@media (max-width: 960px) {
+  #footerZ [class*="col"] {
+    text-align: center;
+  }
+}
