--- a/css/common.css
+++ b/css/common.css
@@ -40,8 +40,8 @@
 }
 
 /* title in mobile nav */
-@media (max-width: 992) {
-  .title {
+@media (max-width: 992px) {
+  #logo .title {
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
