--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Roboto";
+  font-family: Roboto;
 }
 
 html, body {
@@ -17,7 +17,7 @@ html, body {
 body {
   background: #fff;
   color: #666666;
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 @media(min-width: 768px) {
@@ -92,7 +92,7 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
   padding: 0;
@@ -167,7 +167,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 6px 0;
   line-height: 1;
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
   font-weight: 700;
   letter-spacing: 3px;
   text-transform: uppercase;
@@ -378,7 +378,7 @@ Search glyphicon and text styling
 }
 
 #hero .btn-get-started {
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
   text-transform: uppercase;
   font-weight: 500;
   font-size: 16px;
@@ -521,7 +521,7 @@ Search glyphicon and text styling
 	text-decoration: none;
 	display: inline-block;
 	color: #f5f5f5;
-	font-family: "Roboto", sans-serif;
+	font-family: Roboto, sans-serif;
 	font-weight: 400;
 	text-transform: uppercase;
 	font-size: 13px;
@@ -818,7 +818,7 @@ a:hover {
 #facts .counters p {
   padding: 0;
   /*margin: 0 0 20px 0;*/
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
   font-size: 14px;
 }
 
@@ -948,7 +948,7 @@ a:hover {
 }
 
 #call-to-action .cta-btn {
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
   text-transform: uppercase;
   font-weight: 500;
   font-size: 16px;
@@ -1281,7 +1281,7 @@ a:hover {
 */
 
 #artistList a {
-  font-family: "Roboto";
+  font-family: Roboto;
   font-size: 24px;
   color: #b7b7b7;
   text-decoration: none;
