add title to mobile nav

--- a/css/common.css
+++ b/css/common.css
@@ -57,6 +57,7 @@ html, body {
   height: 300px;
   transition-duration: 1s;
   display: block;
+  position: relative;
 }
 
 .gallery-slider-inner:hover {
