--- a/css/common.css
+++ b/css/common.css
@@ -61,6 +61,10 @@ html, body {
   width: auto;
   display: block;
   position: relative;
+  transition-property: all;
+  transition-duration: 600ms;
+  transition-timing-function: cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition-delay: 0s;
 }
 
 .gallery-slider-wrapper {
