--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1020,7 +1020,7 @@ a:hover {
   margin-top: 50px;
   max-width: 200px;
   max-height: 200px;
-  box-shadow: 2px 2px rgba(0,0,0,0.75);
+  box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.55);
   top: 0;
   transition: all 600ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
