--- a/css/common.css
+++ b/css/common.css
@@ -77,6 +77,16 @@ html, body {
   transition-duration: 1s;
   background: none;
   border-radius: 50%;
+  position: absolute;
+  top: 50%;
+}
+
+.gallery-slider .control-left {
+  left: 0;
+}
+
+.gallery-slider .control-right {
+  right: 0;
 }
 
 .gallery-slider-control:hover i{
@@ -92,6 +102,7 @@ html, body {
 }
 
 .gallery-slider {
+  position: relative;
   display: flex;
   align-items: center;
 }
