--- a/css/common.css
+++ b/css/common.css
@@ -83,23 +83,13 @@ html, body {
 }
 
 .gallery-slider-control .control-left {
-  left: 0;
+  left: 5%;
+  position: absolute;
 }
 
 .gallery-slider-control .control-right {
-  right: 0;
-}
-
-.gallery-slider-control:hover i{
-  color: white;
-}
-
-.gallery-slider .control-right:hover {
-  background: #0005;
-}
-
-.gallery-slider .control-left:hover {
-  background: #0005;
+  right: 5%;
+  position: absolute;
 }
 
 .gallery-slider {
