--- a/css/common.css
+++ b/css/common.css
@@ -55,7 +55,7 @@ html, body {
 .gallery-slider-inner img{
   height: 200px;
   max-width: 100%;
-  padding: 0px 5px;
+  margin: 0px 5px;
 }
 
 .gallery-slider-wrapper .gallery-slider-inner{
