--- a/css/style.css
+++ b/css/style.css
@@ -1238,7 +1238,7 @@ a:hover {
 	
 	/* padding: 80px 0 60px 0; */
 }
-
+/* 
 
 #footerZ a {
   color: #333;
@@ -1255,7 +1255,7 @@ a:hover {
 
 #footerZ h4 {
   padding-right: 100px;
-}
+} */
 
 #footer {
 	background: #f7f7f7;
