--- a/css/style.css
+++ b/css/style.css
@@ -902,7 +902,7 @@ a:hover {
 /* Call To Action Section
 --------------------------------*/
 #call-to-action {
-	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/124N09119_6CB29_155305e9-0103-4f99-a699-4f1831e06465.png)  center;
+	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/testimonials_bg.jpeg)  center;
 	background-size: cover;
 	padding: 80px 0;
 }
