redirect to index at clicking header title

--- a/css/common.css
+++ b/css/common.css
@@ -62,6 +62,10 @@ html, body {
   top: 10px;
 }
 
+#logo .title:hover {
+  cursor: pointer;
+}
+
 @media (min-width: 993px) {
   #logo .title {
     display: none;
